--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,13 @@
         "build-client": "cd ../client && npm install && npm run build && rm -rf ../server/dist && mv dist ../server/"
     },
     "dependencies": {
+        "cloudinary": "^1.41.3",
         "cors": "^2.8.5",
-        "dotenv": "^16.4.1",
+        "dotenv": "^16.6.1",
         "express": "^4.18.2",
+        "mongoose": "^9.1.4",
         "multer": "^2.0.2",
+        "multer-storage-cloudinary": "^4.0.0",
         "socket.io": "^4.7.4"
     },
     "devDependencies": {
