--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "start": "node index.js",
         "dev": "nodemon index.js",
+        "build": "echo 'No build step required'",
         "build-client": "cd ../client && npm install && npm run build && rm -rf ../server/dist && mv dist ../server/"
     },
     "dependencies": {
